# papers

./: .clang-format  .editorconfig  .git-blame-ignore-refs  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  NEWS  README.md  meson.build  meson_options.txt  papers.doap
data/: meson.build  org.gnome.Evince.metainfo.xml.in  org.gnome.Papers.Daemon.service.in  org.gnome.Papers.desktop.in.in  org.gnome.Papers.gschema.xml  org.gnome.Papers.metainfo.xml.in  org.gnome.Papers.metainfo.xml.in.in  org.gnome.Papers.service.in  org.gnome.papers.Daemon.service.in  papers-previewer.1  papers-thumbnailer.1  papers.1
data/icons/: meson.build
libmisc/: ev-page-action-widget.c  ev-page-selector.c  ev-page-selector.h  ev-page-selector.ui  libmisc.gresource.xml  meson.build  pps-page-selector.c  pps-page-selector.h  pps-page-selector.ui
libview/: ev-annotation-window.c  ev-jobs.c  ev-jobs.h  ev-view-accessible.c  ev-view-presentation.c  ev-view.c  libview.gresource.xml  meson.build  papers-view.h  pps-annotation-window.c  pps-annotation-window.h  pps-color-contrast.c  pps-color-contrast.h  pps-debug.c  pps-debug.h  pps-document-model.c  pps-document-model.h  pps-form-field-accessible.c  pps-form-field-accessible.h  pps-image-accessible.c  pps-image-accessible.h  pps-job-scheduler.c  pps-job-scheduler.h  pps-job.c  pps-job.h  pps-jobs.c  pps-jobs.h  pps-link-accessible.c  pps-link-accessible.h  pps-page-accessible.c  pps-page-accessible.h  pps-page-cache.c  pps-page-cache.h  pps-pixbuf-cache.c  pps-pixbuf-cache.h  pps-print-operation.c  pps-print-operation.h  pps-view-accessible.c  pps-view-accessible.h  pps-view-cursor.c  (+8 more)
libview/context/: pps-annotations-context.c  pps-annotations-context.h  pps-attachment-context.c  pps-attachment-context.h  pps-bookmarks.c  pps-bookmarks.h  pps-document-model.c  pps-document-model.h  pps-history.c  pps-history.h  pps-metadata.c  pps-metadata.h  pps-search-context.c  pps-search-context.h  pps-search-result.c  pps-search-result.h
previewer/: ev-previewer-window.c  ev-previewer.c  meson.build  papers-previewer.css  pps-page-selector.c  pps-page-selector.h  pps-page-selector.ui  pps-previewer-window.c  pps-previewer-window.h  pps-previewer-window.ui  pps-previewer.c  previewer-window.ui  previewer.gresource.xml
properties/: meson.build  pps-properties-main.c  pps-properties.c  pps-properties.h
rust/papers-document/: Cargo.toml  Gir.toml
rust/papers-document/src/: lib.rs  mark.rs
rust/papers-document/src/auto/: annotation.rs  annotation_attachment.rs  annotation_free_text.rs  annotation_markup.rs  annotation_text.rs  annotation_text_markup.rs  attachment.rs  certificate_info.rs  document.rs  document_annotations.rs  document_attachments.rs  document_find.rs  document_fonts.rs  document_forms.rs  document_images.rs  document_info.rs  document_layers.rs  document_links.rs  document_security.rs  enums.rs  (+18 more)
shell/: Cargo.toml  README.md  ev-annotations-toolbar.c  ev-application.c  ev-application.h  ev-find-sidebar.c  ev-password-view.c  ev-password-view.h  ev-recent-view.c  ev-recent-view.ui  ev-search-box.c  ev-sidebar-links.ui  ev-sidebar-thumbnails.c  ev-sidebar-thumbnails.ui  ev-sidebar.c  ev-sidebar.h  ev-sidebar.ui  ev-stack-switcher.c  ev-stack-switcher.h  ev-toolbar.c  ev-toolbar.h  ev-toolbar.ui  ev-window-title.c  ev-window-title.h  ev-window.c  ev-window.h  ev-window.ui  evince-password-view.ui  evince-recent-view.ui  evince-search-box.ui  evince-sidebar-bookmarks.ui  evince-sidebar.ui  evince-toolbar.ui  evince-window.ui  evince-zoom-action.ui  evince.css  evince.gresource.xml  help-overlay.ui  main.c  meson.build  (+106 more)
shell-rs/: Cargo.toml  README.md  meson.build  update-bindings.sh
shell-rs/ev-girs/: PapersDocument-4.0.gir  PapersShell-4.0.gir  PapersView-4.0.gir
shell-rs/papers-document/: Cargo.toml  Gir.toml
shell-rs/papers-document/src/: document_info.rs  lib.rs
shell-rs/papers-document/sys/: Cargo.toml  Gir.toml  build.rs
shell-rs/papers-shell/: Cargo.toml  Gir.toml  test
shell-rs/papers-shell/src/: lib.rs  prelude.rs
shell-rs/papers-shell/sys/: Cargo.toml  Gir.toml  build.rs
shell-rs/papers-view/: Cargo.toml  Gir.toml
shell-rs/papers-view/src/: attachment_context.rs  lib.rs
shell-rs/papers-view/sys/: Cargo.toml  Gir.toml  build.rs
shell-rs/src/: annotation_properties_dialog.rs  application.rs  config.rs.in  deps.rs  document_view.rs  find_sidebar.rs  loader_view.rs  main.rs  meson.build  page_selector.rs  password_view.rs  properties_fonts.rs  properties_general.rs  properties_signatures.rs  properties_window.rs  search_box.rs  sidebar.rs  sidebar_annotations.rs  sidebar_annotations_row.rs  sidebar_attachments.rs  sidebar_layers.rs  sidebar_links.rs  sidebar_page.rs  sidebar_thumbnails.rs  stack_switcher.rs  utils.rs  window.rs  zoom_action.rs
shell-rs/src/document_view/: actions.rs  io.rs  print.rs
shell-rs/src/window/: file_monitor.rs
shell/ev-girs/: PapersDocument-4.0.gir
shell/papers-document/: Gir.toml
shell/papers-document/sys/: Cargo.toml
shell/papers-view/sys/: Gir.toml
shell/resources/: help-overlay.ui  papers.css  pps-document-view.ui  pps-find-sidebar.ui  pps-loader-view.ui  pps-page-selector.ui  pps-password-dialog.ui  pps-password-view.ui  pps-progress-message-area.ui  pps-properties-license.ui  pps-properties-window.ui  pps-search-box.ui  pps-sidebar-annotations.ui  pps-sidebar-attachments.ui  pps-sidebar-layers.ui  pps-sidebar-links.ui  pps-sidebar-thumbnails.ui  pps-sidebar.ui  pps-window.ui
shell/src/: application.rs  config.rs.in  deps.rs  document_view.rs  find_sidebar.rs  i18n.rs  keyring.rs  page_selector.rs  password_view.rs  progress_message_area.rs  properties_general.rs  properties_license.rs  properties_window.rs  search_box.rs  sidebar.rs  sidebar_annotations.rs  sidebar_annotations_row.rs  sidebar_attachments.rs  sidebar_layers.rs  sidebar_links.rs  sidebar_page.rs  sidebar_thumbnails.rs  stack_switcher.rs  window.rs
shell/src/document_view/: actions.rs  io.rs  print.rs  signals.rs
thumbnailer/: evince-thumbnailer.c  meson.build  papers-thumbnailer.c
(+498 files in other folders)
