[package]
name = "papers"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
env_logger = "0.10"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
log = "0.4"
lru = "0.12"
once_cell = "1"

[dependencies.glib]
package = "glib"
git = "https://github.com/gtk-rs/gtk-rs-core"
features = ["v2_68"]

[dependencies.glib_sys]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
package = "gio"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk_pixbuf]
package = "gdk-pixbuf"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
features = ["v4_12"]

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gtk4-rs"

[dependencies.adw]
package = "libadwaita"
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git"
features = ["v1_2"]


[dependencies.papers_shell]
package = "papers-shell"
path = "./papers-shell"

[dependencies.papers_view]
package = "papers-view"
path = "./papers-view"

[dependencies.papers_document]
package = "papers-document"
path = "./papers-document"

[workspace]
members = [
  './papers-shell',
  './papers-shell/sys',
  './papers-view',
  './papers-view/sys',
  './papers-document',
  './papers-document/sys',
]
exclude = [
  './gir',
]
