[package]
name = "papers"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[features]
with-keyring = []

[dependencies]
env_logger = "0.10"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
log = "0.4"
lru = "0.12"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"
features = ["v2_68"]

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
version = "0.9"
features = ["v4_12"]

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
version = "0.9"

[dependencies.adw]
package = "libadwaita"
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git"
version = "0.7"
branch = "master"
features = ["v1_5"]

[dependencies.papers_shell]
package = "papers-shell"
path = "./papers-shell"

[dependencies.papers_view]
package = "papers-view"
path = "./papers-view"

[dependencies.papers_document]
package = "papers-document"
path = "./papers-document"

[workspace]
members = [
  './papers-shell',
  './papers-shell/sys',
  './papers-view',
  './papers-view/sys',
  './papers-document',
  './papers-document/sys',
]
exclude = [
  './gir',
]
