[package]
name = "papers"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[features]
with-keyring = ["dep:oo7"]

[dependencies]
env_logger = "0.11"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
log = "0.4"
lru = "0.12"
futures = "0.3"
oo7 = { version = "0.3", optional = true }

[dependencies.glib]
version = "0.20"
features = ["v2_68"]

[dependencies.gio]
version = "0.20"

[dependencies.gdk-pixbuf]
version = "0.20"

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_12"]

[dependencies.gdk]
package = "gdk4"
version = "0.9"

[dependencies.pango]
package = "pango"
version = "0.20.0"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]

[dependencies.papers_shell]
package = "papers-shell"
path = "./papers-shell"

[dependencies.papers_view]
package = "papers-view"
path = "./papers-view"

[dependencies.papers_document]
package = "papers-document"
path = "./papers-document"

[workspace]
members = [
  './papers-shell',
  './papers-shell/sys',
  './papers-view',
  './papers-view/sys',
  './papers-document',
  './papers-document/sys',
]
exclude = [
  './gir',
]
