[package]
name = "papers-document"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["v47"]
v47 = ["ffi/v47"]
v48 = ["ffi/v48", "v47"]

[dependencies]
libc = "0.2"
bitflags = "2.2"

[dependencies.ffi]
package = "papers-document-sys"
path = "./sys"

[dependencies.glib]
version = "0.20"

[dependencies.gio]
version = "0.20"

[dependencies.gdk-pixbuf]
version = "0.20"

[dependencies.gtk]
package = "gtk4"
version = "0.9"

[dependencies.gdk]
package = "gdk4"
version = "0.9"

[dependencies.pango]
package = "pango"
version = "0.20"
