[package]
name = "papers-shell"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "2.2"

[dependencies.ffi]
package = "papers-shell-sys"
path = "./sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
version = "0.9"

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
version = "0.9"

[dependencies.adw]
package = "libadwaita"
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git"
version = "0.7"
branch = "master"

[dependencies.papers_document]
package = "papers-document"
path = "../papers-document"

[dependencies.papers_view]
package = "papers-view"
path = "../papers-view"
