[package]
name = "papers-shell"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "2.2"

[dependencies.ffi]
package = "papers-shell-sys"
path = "./sys"

[dependencies.glib]
version = "0.19"

[dependencies.gio]
version = "0.19"

[dependencies.gdk-pixbuf]
version = "0.19"

[dependencies.gtk]
package = "gtk4"
version = "0.8"

[dependencies.gdk]
package = "gdk4"
version = "0.8"

[dependencies.adw]
package = "libadwaita"
version = "0.6"

[dependencies.papers_document]
package = "papers-document"
path = "../papers-document"

[dependencies.papers_view]
package = "papers-view"
path = "../papers-view"
