[package]
name = "papers-shell-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
license = "MIT"

[package.metadata.system-deps.papers_shell_4_0]
name = "papers-shell-4.0"
version = "4"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "papers_shell_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.glib-sys]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.cairo-sys]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.pango-sys]
package = "pango-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
version = "0.20"

[dependencies.gdk-sys]
package = "gdk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
version = "0.9"

[dependencies.gtk-sys]
package = "gtk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
version = "0.9"

[dependencies.adw]
package = "libadwaita-sys"
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git"
version = "0.7"
branch = "master"

[dependencies.papers-document-sys]
path = "../../papers-document/sys"

[dependencies.papers-view-sys]
path = "../../papers-view/sys"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
