[package]
name = "papers-view-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.papers_view_4_0]
name = "papers-view-4.0"
version = "4"

[package.metadata.system-deps.papers_view_4_0.v42]
version = "42"

[package.metadata.system-deps.papers_view_4_0.v46]
version = "46"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "papers_view_sys"

[dependencies]
libc = "0.2"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.cairo]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk]
package = "gdk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"

[dependencies.gtk]
package = "gtk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"

[dependencies.gdk_pixbuf]
package = "gdk-pixbuf-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.pango]
package = "pango-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.papers_document]
package = "papers-document-sys"
path = "../../papers-document/sys"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v42 = []
v46 = []
