[package]
name = "papers-view-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.papers_view_4_0]
name = "papers-view-4.0"
version = "4"

[package.metadata.system-deps.papers_view_4_0.v42]
version = "42"

[package.metadata.system-deps.papers_view_4_0.v46]
version = "46"

[package.metadata.system-deps.papers_view_4_0.v48]
version = "48"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "papers_view_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
version = "0.20"

[dependencies.glib-sys]
package = "glib-sys"
version = "0.20"

[dependencies.gobject-sys]
version = "0.20"

[dependencies.cairo-sys]
package = "cairo-sys-rs"
version = "0.20"

[dependencies.gdk-pixbuf-sys]
version = "0.20"

[dependencies.pango-sys]
package = "pango-sys"
version = "0.20"

[dependencies.gdk-sys]
package = "gdk4-sys"
version = "0.9"

[dependencies.gtk-sys]
package = "gtk4-sys"
version = "0.9"

[dependencies.papers-document-sys]
path = "../../papers-document/sys"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v42 = []
v46 = []
v48 = ["v46"]
